--- a/matiushin_medvedev/docker-compose.yaml
+++ b/matiushin_medvedev/docker-compose.yaml
@@ -4,6 +4,7 @@ postgres:
   ports:
     - "5432:5432"
   environment:
-    - POSTGRES_PASSWORD=superuserpass
+    - POSTGRES_USER=education
+    - POSTGRES_PASSWORD=password
   volumes:
     - ./init.sql:/docker-entrypoint-initdb.d/init.sql
