Connection creds to ENV. Fix gradebook entity

--- a/matiushin_medvedev/docker-compose.yaml
+++ b/matiushin_medvedev/docker-compose.yaml
@@ -5,6 +5,10 @@ services:
     container_name: flask_students
     ports:
       - "5000:5000"
+    environment:
+      - POSTGRESQL_USERNAME=education
+      - POSTGRESQL_PASSWORD=password
+      - POSTGRESQL_HOST=postgresql
     depends_on:
       - postgres
   postgres:
